old-site/css/main.css
html, body {
  background: gray;
  font-family: 'Montserrat', sans-serif;
  margin: 0;
  padding: 0;
}

html {
  box-sizing: border-box;
}


.body-wrap {
  background: #F2F2F2;
  margin: 0 auto;
  width: 800px;
}

section {
  margin: 0 auto;
  width: 800px;
}

h2 {
  text-align: center;
  color: black;
  display: block;
  margin: 0;
  padding: 10px 0;
  width: 100%;
}

/* INTRO */
@media (max-width: 767px) {
  .intro {
    width: 767px;
  }
}
.intro {
  background-image: url("bg.jpg");
  box-shadow: 
  background-size: cover;
  background-position: top;
  position: relative;
  height: 375px;
  } 
.orange-overlay {
  background:#FF2400; 
  opacity:0.7;
  position: relative; 
  top:0px; 
  height: 100%;
  width: 100%;
  float: left;
}
div.center {
  text-align: center;
  margin: auto;
  position: relative;
  top: 70%;
  transform: translateY(-99%);
}
.firstbillion {
  font-size: 24px;
  text-align: center;
  color: white;
  z-index: 2;
  top: 50%;
  transform: translateY(-50%);
}
.firstbillion p {
  font-size: 12px;
}
h1 {
  margin: auto;
}
/* ABOUT */
.about {
  margin: 20px 0 0 0;
}
.about p {
  text-align: center;
  margin: 0;
  font-size: 12px;
}

.calltoaction {
  position: absolute;
  background-color: #F2F2F2;
  height: 300px;
}
/* Instructions */
/* SEND MONEY */
.sendmoney {
  float: left;
  max-width: 170px;
  border: 1px;
  border-color: gray;
  background: #f2f2f2;
  display: block;
  margin: 30px 45px 30px 50px;
}
.sendmoneycircle {
  border: 1px solid #a1a1a1;
  padding: 10px; 
  background: #dddddd;
  height: 150px;
  width: 150px;
  border-radius: 100%;
  position: center;
}
@media (max-width: 767px) {
  .sendmoney p {
    display: block;
  }
}
.sendmoney p {
  display: none;
}
.sendmoney:hover p {
  text-align: center;
  font-size: 10px;
  display: block
}
.fa.fa-money.fa-4x {
  text-align: center;
  color: gray;
  margin-top: 25px;
  display: block;
}

/* RECEIVE */
.receive {
  width: 170px;
  background: #f2f2f2;
  display: block;
  float: left;
  margin: 30px 45px 30px 45px;
}
.receivecircle {
  border: 1px solid #a1a1a1;
  padding: 10px; 
  background: #dddddd;
  height: 150px;
  width: 150px;
  border-radius: 100%;
  display: block;
}
.receive p {
  display: none;
}
.receive:hover p {
  text-align: center;
  font-size: 10px;
  display: block;
}
.fa.fa-tint.fa-4x {
  text-align: center;
  color: gray;
  display: block;
  margin-top: 25px;
}
/* REPEAT */
.repeat {
  float: left;
  width: 170px;
  background: #f2f2f2;
  display: block;
  margin: 30px 45px 30px 45px;
}
.repeatcircle {
  border: 1px solid #a1a1a1;
  padding: 10px;
  background: #dddddd;
  height: 150px;
  width: 150px;
  border-radius: 100%;
  display: block;
}
.repeat p {
  display: none;
}
.repeat:hover p {
  text-align: center;
  font-size: 10px;
  display: block;
}
.fa.fa-heart.fa-4x {
  text-align: center;
  color: gray;
  display: block;
  margin-top: 25px;
}

h3 {
  text-align: center;
  font-size: 14px;
}
/* Footer */

footer {
  margin: 300px 0 0 0;
  width: 800px;
  color: black;
  z-index: 1;
  display: block;
  position: absolute;
  float: left;
  background-color: black;
}

footer p {
  font-size: 10px;
  margin: 0 0 0 43px;
  color: white;
  padding: 2px;
}

